force-app/main/default/objects/ConfirmationCheck__c/ConfirmationCheck__c.object-meta.xml
<CustomObject>
    <label>新規確認書チェック</label>
    <nameField>
        <displayFormat>CC-{000000000}</displayFormat>
        <label>ご確認書チェックNo</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>Private</sharingModel>
</CustomObject>