force-app/main/default/objects/ConfirmationCheck__c/fields/AlertMessage__c.field-meta.xml
<CustomField>
    <fullName>AlertMessage__c</fullName>
    <label>アラートメッセージ</label>
    <type>TextArea</type>
</CustomField>