force-app/main/default/objects/ConfirmationCheck__c/fields/Answer__c.field-meta.xml
<CustomField>
    <fullName>Answer__c</fullName>
    <label>回答</label>
    <length>255</length>
    <type>Text</type>
</CustomField>