force-app/main/default/objects/ConfirmationCheck__c/fields/MediationRequest__c.field-meta.xml
<CustomField>
    <fullName>MediationRequest__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>斡旋依頼</label>
    <referenceTo>MediationRequest__c</referenceTo>
    <relationshipLabel>新規確認書チェック</relationshipLabel>
    <relationshipName>MediationRequestConfirmationCheck</relationshipName>
    <type>Lookup</type>
</CustomField>