force-app/main/default/objects/ConfirmationCheck__c/fields/QuestionTitle__c.field-meta.xml
<CustomField>
    <fullName>QuestionTitle__c</fullName>
    <label>質問タイトル</label>
    <length>255</length>
    <type>Text</type>
</CustomField>