force-app/main/default/objects/ConfirmationCheck__c/validationRules/NotChangeAfterContractDocumentScrutiny.validationRule-meta.xml
<ValidationRule>
    <fullName>NotChangeAfterContractDocumentScrutiny</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
 NOT(ISBLANK(NewMatter__r.ContractDocumentScrutinyDate__c)), 
OR(
   ISNEW(),
   ISCHANGED( Answer__c ),
   ISCHANGED( CheckResult__c ),
   ISCHANGED( Note__c )

)
)</errorConditionFormula>
    <errorMessage>書類精査完了後、回答内容を変更することはできません。</errorMessage>
</ValidationRule>