force-app/main/default/objects/ConfirmationCheck__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>MediationRequest__c</columns>
    <columns>Answer__c</columns>
    <columns>CheckResult__c</columns>
    <columns>AlertMessage__c</columns>
    <filterScope>Everything</filterScope>
    <label>すべて選択</label>
</ListView>